K8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: timey-web
spec:
  type: ClusterIP
  ports:
  - name: timey-web
    port: 80
    protocol: TCP
  selector:
    app: timey-web
