K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timey-web-ingress
  namespace: timey
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.zero8.io
    http:
      paths:
      - backend:
          service:
            name: timey-web
            port:
              number: 80
        path: /
        pathType: Prefix
